syntax = "proto3";
package order.v1;

option go_package = "github.com/firacloudtech/grpc-gateway-swagger-buf/proto/order";

import "google/api/annotations.proto";
import "protoc-gen-openapiv2/options/annotations.proto";

service OrderService {
	rpc CreateOrder(CreateOrderRequest) returns (CreateOrderResponse){
		option (google.api.http)= {

			post : "/api/v1/orders/create",
			body: "*"

		};
		option (grpc.gateway.protoc_gen_openapiv2.options.openapiv2_operation) = {
			summary: "Add an order"
			description: "Add an order"
		};
	}
}


message CreateOrderRequest {
string name = 1;
}

message CreateOrderResponse {
	string message = 1;
}