syntax = "proto3";
package product.v1;

option go_package = "github.com/firacloudtech/grpc-gateway-swagger-buf/proto/product";

import "google/api/annotations.proto";
import "protoc-gen-openapiv2/options/annotations.proto";

service ProductService {

	rpc CreateProduct(CreateProductRequest) returns (CreateProductResponse){
		option (google.api.http)= {

			post : "/api/v1/products/create",
			body: "*"

		};
		option (grpc.gateway.protoc_gen_openapiv2.options.openapiv2_operation) ={
			 summary: "Add a product"
      description: "Add a product to the server."
		};
	}
	rpc ReadProduct(ReadProductRequest) returns (ReadProductResponse) {

		option (google.api.http) = {
			post : "/api/v1/products/read",
			body: "*"
		};
	}
  rpc UpdateProduct(UpdateProductRequest) returns (UpdateProductResponse) {}
  rpc DeleteProduct(DeleteProductRequest) returns (DeleteProductResponse) {}
}


message CreateProductRequest {
	string name = 1;
}


message CreateProductResponse {
  string message = 1;
}


message ReadProductRequest {
  string id = 1;
}


message ReadProductResponse {
  string name = 1;
}


message UpdateProductRequest {
  string id = 1;
  string name = 2;
}

message UpdateProductResponse {
  bool success = 1;
}


message DeleteProductRequest {
  string id = 1;
}


message DeleteProductResponse {
  bool success = 1;
}